ErrorBox: Wrap words correctly

--- a/src/components/ErrorBox.css
+++ b/src/components/ErrorBox.css
@@ -2,3 +2,7 @@
 	font-size: 110%;
 	font-weight: bold;
 }
+
+.error p {
+	word-break: normal;
+}
